syntax = "proto3";

package order;

option go_package = "order/orderpb";

service OrderService {
  rpc CreateOrder (OrderRequest) returns (OrderResponse);
  rpc GetOrderByID (OrderID) returns (Order);
  rpc UpdateOrderStatus (StatusUpdateRequest) returns (OrderResponse);
  rpc ListOrdersByUser (UserID) returns (OrderList);
  rpc UpdateOrder (Order) returns (OrderResponse);
  rpc DeleteOrderByID (OrderID) returns (DeleteResponse);
}

message Order {
  int32 id = 1;
  int32 user_id = 2;
  string status = 3;
  repeated OrderItem items = 4;
}

message OrderItem {
  int32 product_id = 1;
  int32 quantity = 2;
}

message OrderRequest {
  int32 user_id = 1;
  repeated OrderItem items = 2;
}

message OrderID {
  int32 id = 1;
}

message UserID {
  int32 id = 1;
}

message StatusUpdateRequest {
  int32 order_id = 1;
  string status = 2;
}

message OrderResponse {
  bool success = 1;
  string message = 2;
  Order order = 3;
}

message OrderList {
  repeated Order orders = 1;
}

message DeleteResponse {
  bool success = 1;
  string message = 2;
}
